# apl-api

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  md_parser.py  models.py  parser.py  pyproject.toml  requirements.txt  test_main.py  test_md_parser.py  test_parser.py
.github/: dependabot.yml
.github/workflows/: linter.yml
apl_api/: config.py  main.py  models.py  parser.py  routes.py
tests/: test_main.py  test_parser.py
