[project]
name = "apl-api"
version = "0.1.0"
description = "API for Christoher Alexander's _A Pattern Language_"
authors = [
    "https://github.com/adnanvaldes/"
]
license = "MIT"
readme = "README.md"
python = "^3.9"
dependencies = [
    "fastapi[standard] >=0.115.0 <=0.116.0",
    "sqlmodel < 0.1.0",
    "apscheduler >= 3.10.0 <=3.11.0",
]
classifiers = [
    "Topic :: Software Development"
]

[project.urls]
homepage = "https://github.com/adnanvaldes/apl-api"
repository = "https://github.com/adnanvaldes/apl-api"
documentation = "https://github.com/adnanvaldes/apl-api"

[project.optional-dependencies]
testing = [
    "pytest==8.3.3",
    "pytest-mock==3.14.0",
]
